--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ a {
             </div>
 <br>
 <br>
-<p>Created ay <b>iGeekOS</b></p>
+<p>Created by <b>iGeekOS</b></p>
 <div class="block">
 <br>
 <h1>Geek Store</h1>
